tests/invalid/var_no_type_no_init.prsm
// E022: Variable declared without type annotation and without initializer
component NoInit : MonoBehaviour {
    func prepare() {
        var pending
    }
}
